--- a/Runtime/Nementic.SceneValidation.Runtime.asmdef
+++ b/Runtime/Nementic.SceneValidation.Runtime.asmdef
@@ -6,7 +6,8 @@
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
-    "autoReferenced": false,
+    "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": []
+    "versionDefines": [],
+    "noEngineReferences": false
 }
